2016-04-11 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metering and monitoring controls.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a statistics display.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassmonitor/glassmonitor.cpp' that caused
	the section divider to be drawn only between the first two monitor
	strips.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a summary alarm indicator.