@@ -4,8 +4,67 @@
 ;
 
 [Global]
+; JackCommandLine=<cmd>
+;
+; The command used to start the JACK server.  See the jackd(1) man page
+; for details.
+;
 JackCommandLine=jackd -R -d alsa -d hw:0
+
+; JackServerName=<name>
+;
+; The name of the JACK server instance to connect to.  Normally can be left
+; blank.
+;
 JackServerName=
+
+
+[Mail]
+; AlertAddress=<mail-addr>
+;
+; The mail address to which to send alert messages.
+;
+AlertAddress=alert@example.com
+
+; FromAddress=<mail-addr>
+;
+; The mail address to use for the From: headers in alert messages.
+;
+FromAddress=noreply@example.com
+
+; SmtpHostname=<smtp-hostname>
+;
+; The hostname of the SMTP server to use when sending mail messages.
+;
+SmtpHostname=smtp.example.com
+
+; SmtpPort
+;
+; The port number to use when connecting to the SMTP server.
+;
+; For 'plain' (unauthenticated) SMTP, this should be 25, while 'classic'
+; SSL setups will likely need 465 and TLS setups will likely need 587.
+;
+SmtpPort=25
+
+; SmtpUserName=<username>
+;
+; The username to use when authenticating with the SMTP server.
+;
+; For 'plain' (unauthenticated) SMTP, this should be left blank.
+;
+SmtpUsername=
+
+; SmtpPassword=<passwd>
+;
+; Ths password to use when authenticating with the SMTP server.
+SmtpPassword=secret
+
+; UseTls=Yes|No
+;
+; Set to 'Yes' if using TLS connect to the SMTP server, otherwise 'No'.
+UseTls=No
+
 
 [Monitor1]
 Url=http://localhost:8000/MyStream
